# HamView_SenseCAP

./: README.md  ve2dx_im1_manual.txt
components/bsp/src/indev/: indev_hid.c  indev_tp.c
components/bsp/src/peripherals/: bsp_i2s.c
components/bus/: i2c_bus.c
components/i2c_devices/touch_panel/: ft5x06.c
examples/hamview/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
examples/hamview/main/: CMakeLists.txt  hamview_alert.c  hamview_alert.h  hamview_backend.c  hamview_backend.h  hamview_event_log.c  hamview_event_log.h  hamview_icom.c  hamview_icom.h  hamview_screen.c  hamview_screen.h  hamview_settings.c  hamview_settings.h  hamview_ui.c  hamview_ui.h  hamview_weather.c  hamview_weather.h  lv_port.c  lv_port.h  main.c  wifi_ui.c  wifi_ui.h
examples/hamview/main/indicator/: config.h  indicator_wifi.c  indicator_wifi.h  view_data.h
